--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,3 +4,8 @@ version: ${version}
 description: Plugin for mounts
 authors: ["Zastrix"]
 api-version: '1.15'
+
+commands:
+  mounts:
+    usage: /<command>
+    description: See all of your mounts.
