--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 main: com.github.zastrixarundell.mounts.Mounts
-description: Mounts for players
+description: Plugin for ESO styled mounts.
 version: ${version}
 name: Mounts
 author: Zastrix
